# vgi-embed

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-entrypoint.sh  embed_worker.py  pyproject.toml  serve.py
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
test/sql/: scalars.test  tables.test
tests/: harness.py  test_client_integration.py  test_scalars.py  test_tables.py
vgi_embed/: __init__.py  meta.py  models.py  scalars.py  schema_utils.py  tables.py  worker.py
